force-app/main/default/objects/Rental__c/Rental__c.object-meta.xml
<CustomObject>
    <description>Represents a Rental Reservation for a Customer</description>
    <label>Rental</label>
    <nameField>
        <displayFormat>RA-{0000000}</displayFormat>
        <label>Rental ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rentals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>