force-app/main/default/objects/Rental__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>The Account for the Reservation</description>
    <inlineHelpText>The Account for the Reservation</inlineHelpText>
    <label>Account</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>You must selected a Rental Customer Account</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>RentAll Customer</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Rentals</relationshipLabel>
    <relationshipName>Rentals</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>