force-app/main/default/objects/Rental__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>The City of the Rental Location.</description>
    <inlineHelpText>The City of the Rental Location.</inlineHelpText>
    <label>City</label>
    <length>80</length>
    <type>Text</type>
</CustomField>