force-app/main/default/objects/Rental__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The customer contact responsible for the Rental.</description>
    <inlineHelpText>The customer contact responsible for the Rental.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Rentals</relationshipLabel>
    <relationshipName>CustomerRentals</relationshipName>
    <type>Lookup</type>
</CustomField>