force-app/main/default/objects/Rental__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>Country of the Rental Location.</description>
    <inlineHelpText>Country of the Rental Location.</inlineHelpText>
    <label>Country</label>
    <length>80</length>
    <type>Text</type>
</CustomField>