force-app/main/default/objects/Rental__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <description>The Date the Rental Ends</description>
    <inlineHelpText>The Date the Rental Ends</inlineHelpText>
    <label>End Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>