force-app/main/default/objects/Rental__c/fields/PostalCode__c.field-meta.xml
<CustomField>
    <fullName>PostalCode__c</fullName>
    <description>Postal Code for the Rental Location.</description>
    <inlineHelpText>Postal Code for the Rental Location.</inlineHelpText>
    <label>Postal Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>