force-app/main/default/objects/Rental__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <description>Date the Rental Begins</description>
    <inlineHelpText>Date the Rental Begins</inlineHelpText>
    <label>Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>