force-app/main/default/objects/Rental__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>State/Province of the Rental Location.</description>
    <inlineHelpText>State/Province of the Rental Location.</inlineHelpText>
    <label>State / Province</label>
    <length>40</length>
    <type>Text</type>
</CustomField>