force-app/main/default/objects/Rental__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <defaultValue>&quot;Tentative&quot;</defaultValue>
    <description>The status of the Rental</description>
    <inlineHelpText>The status of the Rental</inlineHelpText>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RentalStatus</valueSetName>
    </valueSet>
</CustomField>