force-app/main/default/objects/Rental__c/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <description>The Street For the Rental Location</description>
    <inlineHelpText>The Street For the Rental Location</inlineHelpText>
    <label>Street</label>
    <type>TextArea</type>
</CustomField>