force-app/main/default/objects/Rental__c/fields/TotalRentalAmount__c.field-meta.xml
<CustomField>
    <fullName>TotalRentalAmount__c</fullName>
    <description>The Total Amount of Rental Fees</description>
    <inlineHelpText>The Total Amount of Rental Fees</inlineHelpText>
    <label>Total Rental Amount</label>
    <summarizedField>ItemReservation__c.TotalRental__c</summarizedField>
    <summaryForeignKey>ItemReservation__c.Rental__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>