force-app/main/default/objects/Rental__c/validationRules/Rental_StartDateBeforeEndDate.validationRule-meta.xml
<ValidationRule>
    <fullName>Rental_StartDateBeforeEndDate</fullName>
    <active>true</active>
    <description>The End Date must be after the Start Date</description>
    <errorConditionFormula>StartDate__c &gt;  EndDate__c</errorConditionFormula>
    <errorMessage>The End Date must be after the Start Date</errorMessage>
</ValidationRule>